# gameboy-emulator

./: .gitignore  CMakeLists.txt  README.md
include/APU/: APU.h
include/CPU/: CPU.h
include/GB/: GB.h
include/MMU/: MMU.h
include/PPU/: PPU.h
include/misc/: options.h  utility.h  utility_constants.h
rom/: .keep  gbpng.gb  minecraft-gb-edition.gb  more_gb.txt  x.gb
saves/demo3d/: kctb.sav
saves/zelda_jpn/: kctb.sav
src/: main.cpp
src/APU/: APU.cpp
src/CPU/: CPU.cpp
src/CPU/ops/: CPU_0_ops.cpp  CPU_1_ops.cpp  CPU_2_ops.cpp  CPU_3_ops.cpp  CPU_cb_ops.cpp
src/GB/: GB.cpp
src/MMU/: MMU.cpp
src/PPU/: PPU.cpp
